<resources>
    <string name="app_name">hometreatment</string>
    <string name="title_activity_maps">Home Treatment</string>
    <string name="hint_services_request">درخواست خدمات</string>
    <string name="hint_track_request">پیگیری درخواست</string>
    <string name="hint_home">خانه</string>
    <string name="hint_payment_manager">مدیریت پرداخت ها</string>
    <string name="hint_store">فروشگاه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_midwifery">زنان و مامایی</string>
    <string name="hint_psychotherapy">روانشناسی و مشاوره</string>
    <string name="hint_veterinary">دامپزشکی</string>
    <string name="hint_audiologists">شنوایی سنجی و گفتار درمانی</string>
    <string name="hint_pharmacy">تهیه دارو</string>
    <string name="hint_death_cerificate">خدمات گواهی فوت</string>
    <string name="hint_doctor_services">خدمات پزشکی</string>
    <string name="hint_nursing_services">خدمات پرستاری</string>
    <string name="hint_kids_old_services">مزاقبت از کودک و سالمند</string>
    <string name="hint_with_patient">همراه بیمار</string>
    <string name="hint_ambulance">آمبولانس</string>
    <string name="hint_physiotherapy_massage">فیزیوتراپی و ماساژ</string>
    <string name="hint_physiotherapy">فیزیوتراپی </string>
    <string name="hint_prepayment_factor">پیش فاکتور ها و پرداخت</string>
    <string name="hint_bill_payment">Bill Payment</string>
    <string name="hint_wallet">Wallet</string>
    <string name="hint_charge_wallet">شارژ کیف پول</string>
    <string name="hint_check_request_services">خدمات مورد نیاز را علامت بزنید</string>
    <string name="hint_injections">تزریقات و سرم</string>
    <string name="hint_bandage_types">انواع پانسمان</string>
    <string name="hint_diabetic_bed_sores">زخم بستر و دبایتی</string>
    <string name="hint_bladder_and_stomach_catheterization">سونداژ مثانه و معده</string>
    <string name="hint_blood_sampling">نمونه گیری خون و ارسال به آزمایشگاه</string>
    <string name="hint_stitch">بخیه زدن و کشیدن بخیه</string>
    <string name="hint_icu_care">مراقبت از بیماران ICU</string>
    <string name="next_step">مرحله بعد</string>
    <string name="hint_automatic_barometer">فشار سنج اتوماتیک با کاف پهن</string>
    <string name="hint_all">همه</string>
    <string name="hint_reserved">رزرو شده</string>
    <string name="hint_canceled">لغو شده</string>
    <string name="hint_done">انجام شده</string>
    <string name="hint_reserve_date">تاریخ رزرو</string>
    <string name="hint_request_type">نوع درخواست</string>
    <string name="hint_done_date">تاریخ انجام</string>
    <string name="hint_order_type">نوع سفارش</string>
    <string name="hint_paid">پرداخت شده</string>
    <string name="hint_not_paid">پرداخت نشده</string>
    <string name="hint_order_number">شماره سفارش</string>
    <string name="hint_pay_status">وضعیت پرداخت</string>
    <string name="hint_pay">پرداخت کنید</string>
    <string name="hint_decs_patient_require_service">(درباره خدمات مورد نیاز بیمار)</string>
    <string name="hint_little_decs">توضیحات مختصر</string>
    <string name="hint_upload_medical_documents">بارگذاری پرونده پزشکی و دستور پزشک</string>
    <string name="next_upload">بارگزاری</string>
    <string name="perivious_step">مرحله قبل</string>
    <string name="hint_patient_location">لوکیشن منزل بیمار بر روی نقشه</string>
    <string name="hint_address">آدرس</string>
    <string name="hint_plaque">پلاک</string>
    <string name="hint_unit">واحد</string>
    <string name="hint_telephone">نلفن</string>
    <string name="hint_date_of_services">تاریخ انجام خدمات</string>
    <string name="hint_from_date">از تاریخ</string>
    <string name="hint_from_day">از روز</string>
    <string name="hint_to_day">تا روز</string>
    <string name="hint_from_hour">از ساعت</string>
    <string name="hint_to_hour">تا ساعت</string>
    <string name="hint_considerations">ملاحضات</string>
    <string name="hint_considerations_desc">هر گونه ملاحضات یا توضیحات درباره این درخواست را اینجا بنویسید</string>
    <string name="hint_submit_request">ثبت درخواست</string>
</resources>