<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PaymentManagerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBillPayment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:onClick="openPrepayment"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_payment_back_one"
            tools:ignore="OnClick" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtFactor"
            style="@style/SecondaryText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/hint_bill_payment"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imgBillPayment"
            app:layout_constraintStart_toStartOf="@id/imgBillPayment"
            app:layout_constraintTop_toTopOf="@+id/imgBillPayment"
            app:layout_constraintVertical_bias="0.309" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/PrimaryText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/hint_prepayment_factor"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/imgBillPayment"
            app:layout_constraintTop_toBottomOf="@id/txtFactor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgWallet"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_payment_back_one" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWallet"
            style="@style/SecondaryText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/hint_wallet"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imgWallet"
            app:layout_constraintStart_toStartOf="@id/imgWallet"
            app:layout_constraintTop_toTopOf="@+id/imgWallet"
            app:layout_constraintVertical_bias="0.309" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/PrimaryText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/hint_charge_wallet"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/imgWallet"
            app:layout_constraintTop_toBottomOf="@id/txtWallet" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>