<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RequestNursingServicesTwoFragment">

    <RelativeLayout
        android:id="@+id/paperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/PrimaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.7"
                        android:text="@string/hint_little_decs" />


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SecondaryText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1.3"
                        android:text="@string/hint_decs_patient_require_service"
                        android:textColor="@color/black" />
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etQuestionContent"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:hint="@string/hint_little_decs"
                    android:paddingTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCategory" />


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/PrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hint_upload_medical_documents" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/PrimaryText"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_button_accent"
                    android:gravity="center"
                    android:text="@string/next_upload"
                    android:textColor="@color/white" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/PrimaryText"
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:background="@drawable/shape_button_accent"
                        android:backgroundTint="@color/orange"
                        android:gravity="center"
                        android:text="@string/perivious_step"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/PrimaryText"
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:background="@drawable/shape_button_accent"
                        android:gravity="center"
                        android:onClick="openStepTwo"
                        android:text="@string/next_step"
                        android:textColor="@color/white"
                        tools:ignore="OnClick" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/binder_clip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>