<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RequestNursingServicesThreeFragment">

    <RelativeLayout
        android:id="@+id/paperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/PrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hint_patient_location" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_map_preview" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/PrimaryText"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/hint_address" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/SecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/normal_view_height"
                        android:background="@drawable/shape_stork_dark_edit_text"
                        android:backgroundTint="@color/gray"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/PrimaryText"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/hint_plaque" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/SecondaryText"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/normal_view_height"
                        android:layout_weight="1"
                        android:background="@drawable/shape_stork_dark_edit_text"
                        android:backgroundTint="@color/gray"
                        android:textColor="@color/black" />


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/PrimaryText"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/hint_unit" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/SecondaryText"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/normal_view_height"
                        android:layout_weight="1"
                        android:background="@drawable/shape_stork_dark_edit_text"
                        android:backgroundTint="@color/gray"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/PrimaryText"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/hint_telephone" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/SecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/normal_view_height"
                        android:layout_weight="1"
                        android:background="@drawable/shape_stork_dark_edit_text"
                        android:backgroundTint="@color/gray"
                        android:textColor="@color/black" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/PrimaryText"
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:background="@drawable/shape_button_accent"
                        android:backgroundTint="@color/orange"
                        android:gravity="center"
                        android:text="@string/perivious_step"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:onClick="openStepTwo"
                        style="@style/PrimaryText"
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:background="@drawable/shape_button_accent"
                        android:gravity="center"
                        android:text="@string/next_step"
                        android:textColor="@color/white"
                        tools:ignore="OnClick" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/binder_clip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>